--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@saas-ui/auth": "^3.4.0",
     "@saas-ui/react": "^2.9.0",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.8",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
+    "lottie-react": "^2.4.1",
     "next": "^14.2.14",
+    "next-seo": "^6.8.0",
+    "postcss": "^8.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "react-remove-scroll": "^2.6.0",
+    "tailwindcss": "^4.1.8",
     "velite": "^0.1.1"
   },
   "devDependencies": {
@@ -33,7 +38,7 @@
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
-    "eslint": "9.12.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.2.14",
     "prettier": "^3.3.3",
     "typescript": "5.6.2"
